src/test/resources/cocos/valid/naming/SimpleBlocksExample.sysml
package 'SimpleBlocksExample' {
	block Car :> Vehicle {
		part eng : Engine;
	}
	block Engine;
	block Vehicle;
}