src/test/resources/cocos/invalid/naming/ReferenceIsMissing.sysml
package 'ReferenceIsMissing' {
	block Car :> NeverDefined {
	}

}